# productinventoryapi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
product_inventory_api/: manage.py
product_inventory_api/core/management/commands/: setupproject.py
product_inventory_api/product_inventory_api/: asgi.py  settings.py  urls.py  wsgi.py
product_inventory_api/product_service/: admin.py  filters.py  models.py  pagination.py  serializers.py  views.py
product_inventory_api/product_service/fixtures/: initial_products.json
product_inventory_api/product_service/migrations/: 0001_initial.py  0002_product_idx_product_name_product_idx_product_price_and_more.py
product_inventory_api/product_service/tests/: test_api.py  test_filters.py  test_models.py  test_pagination.py  test_serializers.py
